[project]
name = "stampipes"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jemma Nelson", email = "nelsonjs@altiusinstitute.org" },
    { name = "Audra Johnson", email = "audrakj@altiusinstitute.org" },
    { name = "Richard Sandstrom", email = "rsandstrom@altiusinstitute.org" },
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.5"

[tool.ruff]
# py37 is the lowest version
target-version = "py37"

[tool.ruff.lint]
ignore = []


#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"
#
#[tool.rye]
#managed = true
#dev-dependencies = [
#    "ruff"
#]
#
#[tool.hatch.metadata]
#allow-direct-references = true
#
#[tool.hatch.build.targets.wheel]
#packages = ["src/stampipes"]
#
