[project]
name = "stampipes"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jemma Nelson", email = "nelsonjs@altiusinstitute.org" },
    { name = "Audra Johnson", email = "audrakj@altiusinstitute.org" },
    { name = "Richard Sandstrom", email = "rsandstrom@altiusinstitute.org" },
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.5"

[tool.ruff]
# py37 is the lowest version
target-version = "py37"

[tool.ruff.lint]
select = [
    # Default ruff errors
    "E4",
    "E7",
    "E9",
    "F",
    "B",      # Bugs from flake8-bugbear
    "W605",   # Only warning that isn't fixed by formatting
    "I",      # Sorting of imports
    "N",      # misleading naming conventions
    "EXE",    # executable-related things
    "G",      # logging-related changes
    "RUF200", # Check pyproject.toml for validity
]
ignore = [
    # We run on python 3.5, so disable suggestions to use f-strings
    "UP031",
    "UP032",
]


#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"
#
#[tool.rye]
#managed = true
#dev-dependencies = [
#    "ruff"
#]
#
#[tool.hatch.metadata]
#allow-direct-references = true
#
#[tool.hatch.build.targets.wheel]
#packages = ["src/stampipes"]
#
